Revert "Add base package name"
This reverts commit 6154b2e422d7b93c3d0afb4d4953a1a0a45c5085.

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                 <version>1.5</version>
                 <configuration>
                     <controlDir>${project.build.directory}/classes/control</controlDir>
-                    <deb>kpi-service/${project.artifactId}_${project.version}_all.deb</deb>
+                    <deb>${project.build.directory}/${project.artifactId}_${project.version}_all.deb</deb>
                 </configuration>
                 <executions>
                     <execution>
