--- a/src/main/resources/control/control
+++ b/src/main/resources/control/control
@@ -1,5 +1,5 @@
-Package: ${project.build.finalName}
-Version: ${project.version}
+Package: kpi-service
+Version: 1.0.0
 Section: misc
 Priority: optional
 Architecture: all
